update usermodel
