# src/swagger/paths.yaml
@@ -181,6 +181,21 @@ paths:
                 industry:
                   type: string
                   example: "Cong nghe thong tin"
+                address:
+                  type: string
+                  example: "Khu II D3 thang 2, Xuan Khanh, Ninh Kieu, Can Tho"
+                educationHighest:
+                  type: string
+                  example: "Đại học"
+                workExperience:
+                  type: string
+                  example: 0
+                EnglishComputerSkills:
+                  type: string
+                  example: "https://image.html"
+                currentLevel:
+                  type: string
+                  example: "Fresher"
         required: true
       responses:
         "200":
@@ -1235,7 +1250,7 @@ components:
         gender:
           type: string
           example: "Nam"
-        adress:
+        address:
           type: string
           example: "Khu II D3 thang 2, Xuan Khanh, Ninh Kieu, Can Tho"
         educationHighest:
@@ -1246,7 +1261,7 @@ components:
           example: 0
         EnglishComputerSkills:
           type: string
-          example: 'https://image.html'
+          example: "https://image.html"
         currentLevel:
           type: string
           example: "Fresher"
